--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
-aFileChooser/build/**
-APDE/build/**
-APDE/src/main/gen/**
-wear-companion/build/**
-sketch-preview/build/**
-build/**
-.gradle/
-.idea
-.idea/copyright/
-.idea/libraries/
-.idea/dictionaries/
-.idea/workspace.xml
-*.log
-local.properties
-*.iml
-APDE/src/main/gen
+/build
+/.git
+/.androidide
+/.gradle
+/build
+
+/APDE/build
+/sketch-preview/build
+/wear-companion/build
+
+/.idea
+/local.properties
