--- a/APDE/build.gradle
+++ b/APDE/build.gradle
@@ -1,54 +1,70 @@
 plugins {
-    id 'com.android.application'
+    id ("com.android.application")
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion (34)
 
     defaultConfig {
-        applicationId "com.calsignlabs.apde"
-        minSdkVersion 27
-        targetSdkVersion 33
-        versionCode 1
-        versionName "v0.5.3"
+        applicationId ("com.calsignlabs.apde")
+        minSdkVersion (19)
+        targetSdkVersion (28)
+        versionCode (1)
+        versionName ("v0.5.3")
         
-        namespace "com.calsignlabs.apde"
+        namespace ("com.calsignlabs.apde")
+        multiDexEnabled (true)
     }
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-project.txt'
+            minifyEnabled (true)
+            proguardFiles (getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-project.txt")
             
             lintOptions {
-                disable 'MissingTranslation'
+                disable ("MissingTranslation")
             }
         }
 
         debug {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-project.txt'
+            minifyEnabled (false)
+            // proguardFiles (getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-project.txt")
         }
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility (JavaVersion.VERSION_17)
+        targetCompatibility (JavaVersion.VERSION_17)
     }
 
     lintOptions {
-        abortOnError false
+        abortOnError (false)
     }
 }
 
 dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'com.takisoft.preferencex:preferencex:1.1.0'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
-    implementation "androidx.multidex:multidex:2.0.1"
+    implementation ("androidx.multidex:multidex:2.0.1")
+    implementation ("androidx.appcompat:appcompat:1.6.1")
+    implementation ("com.google.android.material:material:1.12.0")
+    implementation ("com.takisoft.preferencex:preferencex:1.1.0")
+    implementation ("com.google.android.gms:play-services-auth:17.0.0")
+    implementation ("com.google.android.gms:play-services-wearable:17.0.0")
+    implementation ("androidx.test.espresso.idling:idling-concurrent:3.6.1")
+    implementation ("androidx.legacy:legacy-support-v4:1.0.0")
     
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation ("androidx.test:core:1.4.0")
+    androidTestImplementation ("androidx.test:runner:1.4.0")
+    androidTestImplementation ("androidx.test:rules:1.4.0")
+    androidTestImplementation ("androidx.test.ext:truth:1.4.0")
+    androidTestImplementation ("com.google.truth:truth:1.0.1")
+
+    androidTestImplementation ("androidx.test.espresso:espresso-core:3.6.1")
+    androidTestImplementation ("androidx.test.espresso:espresso-contrib:3.6.1")
+    androidTestImplementation ("androidx.test.espresso:espresso-intents:3.6.1")
+    androidTestImplementation ("androidx.test.espresso:espresso-accessibility:3.6.1")
+    androidTestImplementation ("androidx.test.espresso:espresso-idling-resource:3.6.1")
+    
+    androidTestImplementation ("androidx.test.uiautomator:uiautomator:2.2.0")
+    
+    implementation (fileTree(dir: "libs", include: ["*.jar"]))
 }
