--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ org.gradle.configureondemand=true
 org.gradle.parallel=true
 android.useAndroidX=true
 android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=34
+org.gradle.configuration-cache=true
