--- a/sketch-preview/build.gradle
+++ b/sketch-preview/build.gradle
@@ -1,38 +1,43 @@
 plugins {
-    id 'com.android.application'
+    id ("com.android.application")
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion (34)
 
     defaultConfig {
-        applicationId "com.calsignlabs.apde.sketchpreview"
-        minSdkVersion 27
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
+        applicationId ("com.calsignlabs.apde.sketchpreview")
+        minSdkVersion (20)
+        targetSdkVersion (28)
+        versionCode (1)
+        versionName ("1.0")
         
-        namespace "com.calsignlabs.apde.sketchpreview"
+        namespace ("com.calsignlabs.apde.sketchpreview")
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled (true)
+            proguardFiles (getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
+        }
+        debug {
+            minifyEnabled (false)
+            // proguardFiles (getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
         }
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility (JavaVersion.VERSION_17)
+        targetCompatibility (JavaVersion.VERSION_17)
     }
 
     lintOptions {
-        abortOnError false
+        abortOnError (false)
     }
+    
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation (fileTree(dir: "libs", include: ["*.jar"]))
+    implementation ("androidx.appcompat:appcompat:1.6.1")
 }
