--- a/wear-companion/build.gradle
+++ b/wear-companion/build.gradle
@@ -1,45 +1,49 @@
 plugins {
-    id 'com.android.application'
+    id("com.android.application")
 }
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion(34)
 
     defaultConfig {
-        applicationId "com.calsignlabs.apde"
-        minSdkVersion 27
-        targetSdkVersion 33
-        versionCode 25
-        versionName "1.0"
+        applicationId = "com.calsignlabs.apde"
+        minSdkVersion(20)
+        targetSdkVersion(28)
+        versionCode = 25
+        versionName = "1.0"
 
-        namespace "com.calsignlabs.apde"
+        namespace = "com.calsignlabs.apde"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled(true)
+            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
+        }
+        debug {
+            minifyEnabled(false)
+            // proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
         }
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     lintOptions {
-        abortOnError false
+        abortOnError(false)
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation(fileTree(dir: "libs", include: ["*.jar"]))
 
-    implementation 'com.google.android.support:wearable:2.3.0'
-    implementation 'com.google.android.gms:play-services-wearable:15.0.1'
-    implementation 'androidx.percentlayout:percentlayout:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.4.0-rc01'
-    implementation 'androidx.wear:wear:1.0.0'
-    implementation 'com.google.android.wearable:wearable:2.3.0'
+    implementation("com.google.android.support:wearable:2.3.0")
+    implementation("com.google.android.gms:play-services-wearable:15.0.1")
+    implementation("androidx.percentlayout:percentlayout:1.0.0")
+    implementation("androidx.legacy:legacy-support-v4:1.0.0")
+    implementation("androidx.recyclerview:recyclerview:1.4.0-rc01")
+    implementation("androidx.wear:wear:1.0.0")
+    implementation("com.google.android.wearable:wearable:2.3.0")
 }
